--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>George Koutsogiannis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Welcome to my personal portfolio, in which you will find various projects of mine. More information: <a href="#about">About</a>.</p>
-								<p>For Business Inquiries: <a href="#contact">Contact"</a>.</p>
+								<p>For Business Inquiries: <a href="#contact">Contact</a>.</p>
 							</article>
 
 						<!-- Work -->
